LIN-4039/LIN-4329 Update to Java 21
Change-Id: Ied9a6ca073dc233cabaac400c1cefb7504f4ab2f